@@ -5,55 +5,62 @@ import org.springframework.stereotype.Service;
 import ru.practicum.shareit.Exception.EmailAlreadyExistsException;
 import ru.practicum.shareit.user.dto.UserDto;
 
-import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
-    private final Map<Long, User> users = new HashMap<>();
-    private final AtomicLong idGenerator = new AtomicLong(1);
+    private final UserRepository userRepository;
 
     @Override
     public UserDto create(UserDto userDto) {
         validateUserDto(userDto, null);
-
-        User user = UserMapper.toUser(userDto);
-        user.setId(idGenerator.getAndIncrement());
-        users.put(user.getId(), user);
-        return UserMapper.toUserDto(user);
+        User savedUser = userRepository.save(UserMapper.toUser(userDto));
+        return UserMapper.toUserDto(savedUser);
     }
 
     @Override
     public UserDto update(Long id, UserDto userDto) {
-        User existingUser = users.get(id);
-        if (existingUser == null) throw new NoSuchElementException("Пользователь не найден");
+        User existingUser = userRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Пользователь не найден"));
+
         if (userDto.getEmail() != null) {
             validateUserDto(userDto, id);
             existingUser.setEmail(userDto.getEmail());
         }
-        if (userDto.getName() != null) existingUser.setName(userDto.getName());
 
-        return UserMapper.toUserDto(existingUser);
+        if (userDto.getName() != null) {
+            existingUser.setName(userDto.getName());
+        }
+
+        User savedUser = userRepository.save(existingUser);
+        return UserMapper.toUserDto(savedUser);
     }
 
     @Override
     public UserDto getUserById(Long id) {
-        User user = users.get(id);
-        if (user == null) throw new NoSuchElementException("Пользователь не найден");
-        return UserMapper.toUserDto(user);
+        return userRepository.findById(id)
+                .map(UserMapper::toUserDto)
+                .orElseThrow(() -> new NoSuchElementException("Пользователь не найден"));
     }
 
     @Override
     public List<UserDto> getAllUsers() {
-        return users.values().stream().map(UserMapper::toUserDto).toList();
+        return userRepository.findAll()
+                .stream()
+                .map(UserMapper::toUserDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteUser(Long id) {
-        if (!users.containsKey(id)) throw new NoSuchElementException("Пользователь не найден");
-        users.remove(id);
+        if (!userRepository.existsById(id)) {
+            throw new NoSuchElementException("Пользователь не найден");
+        }
+        userRepository.deleteById(id);
     }
 
     private void validateUserDto(UserDto userDto, Long userIdBeingUpdated) {
@@ -66,10 +73,10 @@ public class UserServiceImpl implements UserService {
         if (!email.matches("^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$")) {
             throw new IllegalArgumentException("Email некорректен");
         }
-        // Проверка уникальности email
-        boolean duplicate = users.values().stream()
-                .anyMatch(u -> u.getEmail().equals(email)
-                        && !Objects.equals(u.getId(), userIdBeingUpdated));
+
+        boolean duplicate = (userIdBeingUpdated == null)
+                ? userRepository.existsByEmail(email)
+                : userRepository.existsByEmailAndIdNot(email, userIdBeingUpdated);
 
         if (duplicate) {
             throw new EmailAlreadyExistsException("Email уже используется");
